# ch_pos

./: .gitignore  POS_BLUEPRINT.md  README.md  install_on_bench.sh  license.txt  pyproject.toml
ch_pos/: _e2e_fifo_bin_gating.py  _e2e_gift_history.py  audit.py  boot.py  check_data.py  check_data2.py  create_custom_fields_pos.py  debug_s10.py  debug_sale.py  hooks.py  modules.txt  patches.txt  setup.py  setup_demo_data.py  setup_qa_vel_manager_pin.py  setup_test_data.py  setup_test_machine.py  test_lifecycle_e2e.py  test_pos_scenarios.py  ui_test_pos_payment.js
ch_pos/api/: _e2e_diag_a.py  _e2e_gstin_submit_guard.py  _e2e_scenario_a.py  _e2e_scenario_b.py  _e2e_scenario_b_clean.py  _e2e_scenario_c.py  ai.py  attach_api.py  free_sale_api.py  gift_redemption.py  guided.py  import_dedup.py  isolation_api.py  item_search.py  offers.py  offline_sync.py  payment_gateway_api.py  pos_api.py  pos_inbound.py  repair.py  scope_guard.py  search.py  session_api.py  session_validation.py  share_api.py  stock_report.py  store_insights.py  token_api.py  ui_test_api.py
ch_pos/constants/: __init__.py
ch_pos/custom/: pos_invoice.js
ch_pos/desktop_icon/: pos.json
ch_pos/overrides/: cash_receipt_limit.py  cutoff_time_guard.py  discount_control.py  free_item_return_guard.py  pos_invoice.py  pos_reserved_qty.py  return_policy.py
ch_pos/tests/: _multi_exception_smoke.py  test_billing_e2e.py  test_buyback_detail_api_contract.py  test_buyback_otp_gate_e2e.py  test_buyback_pos_reflection_e2e.py  test_cash_receipt_269st.py  test_claims_e2e.py  test_csv_import_dedup_e2e.py  (+43 more)
(+227 files in other folders)
