[project]
name = "ch_pos"
dynamic = ["version"]
authors = [
    { name = "Congruence", email = "pallavicr4u@gmail.com" },
]
description = "POS solution for GoGizmo & GoFix retail stores"
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "PyMuPDF>=1.23.0",  # PDF parsing — provides `import fitz`
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
erpnext = ">=16.0.0"
